--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -130,16 +130,31 @@
 }
 
 @inproceedings{2,
- abbr={ICCV},
-  mainlink = {https://openaccess.thecvf.com/content_ICCV_2019/html/Taherkhani_A_Weakly_Supervised_Fine_Label_Classifier_Enhanced_by_Coarse_Supervision_ICCV_2019_paper.html},
+ abbr={Journal of Public Health},
+  mainlink = {https://link.springer.com/article/10.1007/s10389-020-01418-5},
         img = {assets/img/f1.jpg},
-  author    = {Fariborz Taherkhani and
-                Hadi Kazemi and Ali Dabouei and Jeremy Dawson and Nasser M. Nasrabadi},
-  title     = {A Weakly Supervised Fine Label Classifier Enhanced by Coarse Supervision},
-  booktitle = ICCV,
-  year      = {2019},
-  pdf       = {https://openaccess.thecvf.com/content_ICCV_2019/papers/Taherkhani_A_Weakly_Supervised_Fine_Label_Classifier_Enhanced_by_Coarse_Supervision_ICCV_2019_paper.pdf},
-  abstract = {Objects are usually organized in a hierarchical structure in which each coarse category (e.g., big cat) corresponds to a superclass of several fine categories (e.g., cheetah, leopard). The objects grouped within the same coarse category, but in different fine categories, usually share a set of global visual features; however, these objects have distinctive local properties that characterize them at a fine level. This paper addresses the challenge of fine image classification in a weakly supervised fashion, whereby a subset of images is tagged by fine labels, while the remaining are tagged by coarse labels. We propose a new deep model that leverages coarse images to improve the classification performance of fine images within the coarse category. Our model is an end to end framework consisting of a Convolutional Neural Network (CNN) which uses both fine and coarse images to tune its parameters. The CNN outputs are then fanned out into two separate branches such that the first branch uses a supervised low rank self expressive layer to project the CNN outputs to the low rank subspaces to capture the global structures for the coarse classification, while the other branch uses a supervised sparse self expressive layer to project them to the sparse subspaces to capture the local structures for the fine classification. Our deep model uses coarse images in conjunction with fine images to jointly explore the low rank and sparse subspaces by sharing the parameters during the training which causes the data points obtained by the CNN to be well-projected to both sparse and low rank subspaces for classification.},
+  author    = {Sadaf Kabir and
+                Leily Farrokhvar and Michael W Russell and Alex Forman and Behrooz Kamali},
+  title     = {Regional socioeconomic factors and length of hospital stay: a case study in Appalachia},
+  booktitle = Journal of Public Health,
+  year      = {2021},
+  pdf       = {https://www.researchgate.net/profile/Michael-Russell-4/publication/348278532_Regional_socioeconomic_factors_and_length_of_hospital_stay_a_case_study_in_Appalachia/links/6172dc623c987366c3c9bce6/Regional-socioeconomic-factors-and-length-of-hospital-stay-a-case-study-in-Appalachia.pdf},
+  abstract = {Background: The role of socioeconomic status (SES) of patients in health care outcomes has been investigated in many health
+              care systems. The health care literature suggests that there is a relationship between patients' socioeconomic status and their
+              health care outcomes. Most research has investigated this relation using individual SES, rather than exploring the regional
+              socioeconomic characteristics ofa population on patients' outcomes.
+              Purpose: This study explores the correlation between regional socioeconomic characteristics of a population and patients' hospital length
+              of stay (LOS). Assuming the demographic characteristics of patients in a region are relatively consistent, this will enable more effective
+              regional planning and a customized decision-making process considering characteristics of the population that a health care system serves.
+              Methodology: We use a weighted clustering algorithm to exploit the relationship between regional socioeconomic characteristics and
+              patients' LOS. To do so, the demographic attributes and regional socioeconomic factors of patients are obtained using their ZIP Codes.
+              Results The results suggest that regional characteristics have a direct impact on LOS, and patients of the same medical status may
+              experience longer LOS if they live in a more disadvantaged community.
+              Practice implications: Our findings indicate that regional demographic characteristics of the population a health care system
+              serves can have an impact on surgical patient outcomes, specifically length of stay, and therefore can be considered by hospital
+              administrators to enable more efficient and effective resource and operational planning. In optimizing care delivery, to achieve
+              the best possible value for individual patients and populations, it is imp01tant to understand all factors that contribute to the
+              outcomes in order to focus resources to mitigate those that reduce value. },
         selected={true}
 }
 
