--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -160,18 +160,14 @@
 
 
 @inproceedings{1,
- abbr={WACV},
-  mainlink = {https://arxiv.org/pdf/1809.08999.pdf},
+ abbr={ICMLA},
+  mainlink = {https://ieeexplore.ieee.org/abstract/document/8999179},
          img = {assets/img/geo1.jpg},
-  author    = {Ali Dabouei and
-               Sobhan Soleymani and
-               Jeremy Dawson and
-               Nasser M. Nasrabadi},
-  title     = {Fast Geometrically-Perturbed Adversarial Faces},
-  booktitle = WACV,
+  author    = {Sadaf Kabir and Leily Farrokhvar},
+  title     = {Non-linear Feature Selection for Prediction of Hospital Length of Stay},
+  booktitle = ICMLA,
   year      = {2019},
-  arxiv       = {1809.08999},
-  code     =    {https://github.com/alldbi/FLM},
-  abstract = {The state-of-the-art performance of deep learning algorithms has led to a considerable increase in the utilization of machine learning in security-sensitive and critical applications. However, it has recently been shown that a small and carefully crafted perturbation in the input space can completely fool a deep model. In this study, we explore the extent to which face recognition systems are vulnerable to geometrically-perturbed adversarial faces. We propose a fast landmark manipulation method for generating adversarial faces, which is approximately 200 times faster than the previous geometric attacks and obtains 99.86% success rate on the state-of-the-art face recognition models. To further force the generated samples to be natural, we introduce a second attack constrained on the semantic structure of the face which has the half speed of the first attack with the success rate of 99.96%. Both attacks are extremely robust against the state-of-the-art defense methods with the success rate of equal or greater than 53.59%.},
+  pdf       = {https://www.researchgate.net/profile/Sadaf-Kabir/publication/339331753_Non-Linear_Feature_Selection_for_Prediction_of_Hospital_Length_of_Stay/links/5edd03d4299bf1c67d4af8c2/Non-Linear-Feature-Selection-for-Prediction-of-Hospital-Length-of-Stay.pdf},
+  abstract = {Patient length of stay (LOS) is commonly used as an important factor for optimizing medical resource consumption, managing hospital expenses, and improving the quality of hospital services. An accurate prediction of LOS can lead to increased hospital efficiency. In this study, we identify the most significant features for predicting LOS of patients undergoing different surgical procedures. We incorporate a non-linear feature selection method based on artificial neural networks (ANNs) and develop a predictive model for accurate prediction of LOS using the selected features. The performance of the model on different patient categories indicates that the non-linear feature selection method can effectively reduce the number of features and improve the accuracy of the prediction.},
         selected={true}
 }
