--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,24 +39,37 @@
 }
 
 @inproceedings{3,
- abbr={WACV},
-  mainlink = {https://openaccess.thecvf.com/content_WACV_2020/html/Iranmanesh_Robust_Facial_Landmark_Detection_via_Aggregation_on_Geometrically_Manipulated_Faces_WACV_2020_paper.html},
-       img = {assets/img/mehdi1.jpg},
-  author    = {Seyed Mehdi Iranmanesh and Ali Dabouei and Sobhan Soleymani and Hadi Kazemi and Nasser Nasrabadi},
+ abbr={IJDMMM},
+  mainlink = {},
+       img = {assets/img/figmethod.jpg},
+  author    = {Sadaf Kabir and Leily Farrokhvar},
   title     = {Robust Facial Landmark Detection via Aggregation on Geometrically Manipulated Faces},
   booktitle = WACV,
-  year      = {2020},
-  pdf       = {https://openaccess.thecvf.com/content_ICCV_2019/papers/Taherkhani_A_Weakly_Supervised_Fine_Label_Classifier_Enhanced_by_Coarse_Supervision_ICCV_2019_paper.pdf},
-  abstract = {In this work, we present a practical approach to the problem of facial landmark detection. The proposed method can deal with large shape and appearance variations under the rich shape deformation. To handle the shape variations we equip our method with the aggregation of manipulated face images. The proposed framework generates different manipulated faces using only one given face image. The approach utilizes the fact that small but carefully crafted geometric manipulation in the input domain can fool deep face recognition models. We propose three different approaches to generate manipulated faces in which two of them perform the manipulations via adversarial attacks and the other one uses known transformations. Aggregating the manipulated faces provides a more robust landmark detection approach which is able to capture more important deformations and variations of the face shapes. Our approach is demonstrated its superiority compared to the state-of-the-art method on benchmark datasets AFLW, 300-W, and COFW.},
-        selected={true}
+  year      = {2022},
+  pdf       = {IJDMMM},
+  abstract = {Developing accurate predictive models can profoundly help
+              healthcare providers improve the quality of their services. However, medical
+              data often contain several variables, and not all the data equally contribute
+              towards the prediction. The existence of irrelevant and redundant features in a
+              dataset can unnecessarily increase computational cost and complexity while
+              deteriorating the performance of the predictive model. In this study, we employ
+              the gradient-based prediction attribution as a general tool to identify important
+              features in differentiable predictive models, such as neural networks (NN) and
+              linear regression. Built upon this approach, we analyse single-stage and
+              multi-stage scenarios for feature selection using ten medical datasets. Through
+              extensive experiments, we demonstrate that the combination of the
+              gradient-based approach with NN provides a powerful nonlinear technique to
+              identify important features contributing to the prediction. In particular,
+              nonlinear gradient-based feature selection achieves competitive results or
+              significant improvements over previously reported results on all dataset.},
+        selected={true
 }
 
 @inproceedings{2,
  abbr={Journal of Public Health},
   mainlink = {https://link.springer.com/article/10.1007/s10389-020-01418-5},
-        img = {assets/img/paper2.JPG},
-  author    = {Sadaf Kabir and
-                Leily Farrokhvar and Michael W Russell and Alex Forman and Behrooz Kamali},
+        img = {assets/img/paper2.jpg},
+  author    = {Sadaf Kabir and Leily Farrokhvar and Michael W Russell and Alex Forman and Behrooz Kamali},
   title     = {Regional socioeconomic factors and length of hospital stay: a case study in Appalachia},
   booktitle = Journal of Public Health,
   year      = {2021},
@@ -76,7 +89,7 @@
               serves can have an impact on surgical patient outcomes, specifically length of stay, and therefore can be considered by hospital
               administrators to enable more efficient and effective resource and operational planning. In optimizing care delivery, to achieve
               the best possible value for individual patients and populations, it is imp01tant to understand all factors that contribute to the
-              outcomes in order to focus resources to mitigate those that reduce value. },
+              outcomes in order to focus resources to mitigate those that reduce value.},
         selected={true}
 }
 
@@ -84,7 +97,7 @@
 @inproceedings{1,
  abbr={ICMLA},
   mainlink = {https://ieeexplore.ieee.org/abstract/document/8999179},
-         img = {assets/img/mehdibmvc.JPG},
+         img = {assets/img/paper1.jpg},
   author    = {Sadaf Kabir and Leily Farrokhvar},
   title     = {Non-linear Feature Selection for Prediction of Hospital Length of Stay},
   booktitle = ICMLA,
