--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@string{CVPR = {CVPR}}
+@string{ICMLA = {ICMLA}}
 @string{ICLR = {ICLR}}
 @string{ICCV = {ICCV}}
 @string{WACV = {WACV}}
@@ -18,22 +18,7 @@
   booktitle = Journal of Public Health,
   year      = {2021},
   pdf       = {https://www.researchgate.net/profile/Michael-Russell-4/publication/348278532_Regional_socioeconomic_factors_and_length_of_hospital_stay_a_case_study_in_Appalachia/links/6172dc623c987366c3c9bce6/Regional-socioeconomic-factors-and-length-of-hospital-stay-a-case-study-in-Appalachia.pdf},
-  abstract = {Background: The role of socioeconomic status (SES) of patients in health care outcomes has been investigated in many health
-              care systems. The health care literature suggests that there is a relationship between patients' socioeconomic status and their
-              health care outcomes. Most research has investigated this relation using individual SES, rather than exploring the regional
-              socioeconomic characteristics ofa population on patients' outcomes.
-              Purpose: This study explores the correlation between regional socioeconomic characteristics of a population and patients' hospital length
-              of stay (LOS). Assuming the demographic characteristics of patients in a region are relatively consistent, this will enable more effective
-              regional planning and a customized decision-making process considering characteristics of the population that a health care system serves.
-              Methodology: We use a weighted clustering algorithm to exploit the relationship between regional socioeconomic characteristics and
-              patients' LOS. To do so, the demographic attributes and regional socioeconomic factors of patients are obtained using their ZIP Codes.
-              Results The results suggest that regional characteristics have a direct impact on LOS, and patients of the same medical status may
-              experience longer LOS if they live in a more disadvantaged community.
-              Practice implications: Our findings indicate that regional demographic characteristics of the population a health care system
-              serves can have an impact on surgical patient outcomes, specifically length of stay, and therefore can be considered by hospital
-              administrators to enable more efficient and effective resource and operational planning. In optimizing care delivery, to achieve
-              the best possible value for individual patients and populations, it is imp01tant to understand all factors that contribute to the
-              outcomes in order to focus resources to mitigate those that reduce value.},
+  abstract = {aaa},
         selected={true}
 }
 
