--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,14 +10,14 @@
 @string{NeurIPS = {NeurIPS}}
 
 
-@inproceedings{1,
+@inproceedings{2,
  abbr={ICMLA},
   mainlink = {https://ieeexplore.ieee.org/abstract/document/8999179},
          img = {assets/img/paper1.jpg},
-  author    = {Sadaf Kabir and Leily Farrokhvar},
-  title     = {Non-linear Feature Selection for Prediction of Hospital Length of Stay},
+  author    = {Sadaf Kabir and Leily Farrokhvar and Michael W Russell and Alex Forman and Behrooz Kamali},
+  title     = {Regional socioeconomic factors and length of hospital stay: a case study in Appalachia},
   booktitle = ICMLA,
-  year      = {2019},
+  year      = {2021},
   pdf       = {https://www.researchgate.net/publication/339331753_Non-Linear_Feature_Selection_for_Prediction_of_Hospital_Length_of_Stay},
   abstract = {Patient length of stay (LOS) is commonly used as an important factor for optimizing medical resource consumption, managing hospital expenses, and improving the quality of hospital services. An accurate prediction of LOS can lead to increased hospital efficiency. In this study, we identify the most significant features for predicting LOS of patients undergoing different surgical procedures. We incorporate a non-linear feature selection method based on artificial neural networks (ANNs) and develop a predictive model for accurate prediction of LOS using the selected features. The performance of the model on different patient categories indicates that the non-linear feature selection method can effectively reduce the number of features and improve the accuracy of the prediction.},
         selected={true}
