--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
 
 @inproceedings{2,
  abbr={ICMLA},
-  mainlink = {https://ieeexplore.ieee.org/abstract/document/8999179},
+  mainlink = {https://link.springer.com/article/10.1007/s10389-020-01418-5},
          img = {assets/img/paper1.jpg},
   author    = {Sadaf Kabir and Leily Farrokhvar and Michael W Russell and Alex Forman and Behrooz Kamali},
   title     = {Regional socioeconomic factors and length of hospital stay: a case study in Appalachia},
