--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,12 +13,12 @@
 @inproceedings{2,
  abbr={ICMLA},
   mainlink = {https://link.springer.com/article/10.1007/s10389-020-01418-5},
-         img = {assets/img/paper1.jpg},
+         img = {assets/img/paper2.jpg},
   author    = {Sadaf Kabir and Leily Farrokhvar and Michael W Russell and Alex Forman and Behrooz Kamali},
   title     = {Regional socioeconomic factors and length of hospital stay: a case study in Appalachia},
   booktitle = ICMLA,
   year      = {2021},
-  pdf       = {https://www.researchgate.net/publication/339331753_Non-Linear_Feature_Selection_for_Prediction_of_Hospital_Length_of_Stay},
+  pdf       = {https://www.researchgate.net/profile/Michael-Russell-4/publication/348278532_Regional_socioeconomic_factors_and_length_of_hospital_stay_a_case_study_in_Appalachia/links/6172dc623c987366c3c9bce6/Regional-socioeconomic-factors-and-length-of-hospital-stay-a-case-study-in-Appalachia.pdf},
   abstract = {Background: The role of socioeconomic status (SES) of patients in health care outcomes has been investigated in many health
                             care systems. The health care literature suggests that there is a relationship between patients' socioeconomic status and their
                             health care outcomes. Most research has investigated this relation using individual SES, rather than exploring the regional
