--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,15 +8,16 @@
 @string{BMVC = {BMVC}}
 @string{ECCV = {ECCV}}
 @string{NeurIPS = {NeurIPS}}
+@string{Journal of Public Health = {Journal of Public Health}}
 
 
 @inproceedings{2,
- abbr={ICMLA},
+ abbr={Journal of Public Health},
   mainlink = {https://link.springer.com/article/10.1007/s10389-020-01418-5},
          img = {assets/img/paper2.jpg},
   author    = {Sadaf Kabir and Leily Farrokhvar and Michael W Russell and Alex Forman and Behrooz Kamali},
   title     = {Regional socioeconomic factors and length of hospital stay: a case study in Appalachia},
-  booktitle = ICMLA,
+  booktitle = {Journal of Public Health},
   year      = {2021},
   pdf       = {https://www.researchgate.net/profile/Michael-Russell-4/publication/348278532_Regional_socioeconomic_factors_and_length_of_hospital_stay_a_case_study_in_Appalachia/links/6172dc623c987366c3c9bce6/Regional-socioeconomic-factors-and-length-of-hospital-stay-a-case-study-in-Appalachia.pdf},
   abstract = {Background: The role of socioeconomic status (SES) of patients in health care outcomes has been investigated in many health
