--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,11 +8,11 @@
 @string{BMVC = {BMVC}}
 @string{ECCV = {ECCV}}
 @string{NeurIPS = {NeurIPS}}
-@string{Journal of Public Health = {Journal of Public Health}}
+
 
 
 @inproceedings{2,
- abbr={Journal of Public Health},
+ abbr={ICMLA},
   mainlink = {https://link.springer.com/article/10.1007/s10389-020-01418-5},
          img = {assets/img/paper2.jpg},
   author    = {Sadaf Kabir and Leily Farrokhvar and Michael W Russell and Alex Forman and Behrooz Kamali},
