--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,13 +6,13 @@
 @string{ICCV = {ICCV}}
 @string{WACV = {WACV}}
 @string{BMVC = {BMVC}}
-@string{ECCV = {ECCV}}
+@string{JournalofPublicHealth = {JournalofPublicHealth}}
 @string{NeurIPS = {NeurIPS}}
 
 
 
 @inproceedings{2,
- abbr={ICMLA},
+ abbr={JournalofPublicHealth},
   mainlink = {https://link.springer.com/article/10.1007/s10389-020-01418-5},
          img = {assets/img/paper2.jpg},
   author    = {Sadaf Kabir and Leily Farrokhvar and Michael W Russell and Alex Forman and Behrooz Kamali},
