--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,13 +2,36 @@
 ---
 
 @string{ICMLA = {ICMLA}}
-@string{ICLR = {ICLR}}
-@string{ICCV = {ICCV}}
-@string{WACV = {WACV}}
-@string{BMVC = {BMVC}}
+@string{IJDMMM = {IJDMMM}}
 @string{JournalofPublicHealth = {JournalofPublicHealth}}
-@string{NeurIPS = {NeurIPS}}
 
+
+@inproceedings{3,
+ abbr={IJDMMM},
+  mainlink = {},
+       img = {assets/img/figmethod.jpg},
+  author    = {Sadaf Kabir and Leily Farrokhvar},
+  title     = {Nonlinear gradient-based feature selection for precise prediction of diseases},
+  booktitle = IJDMMM,
+  year      = {2022},
+  pdf       = {},
+  abstract = {Developing accurate predictive models can profoundly help
+              healthcare providers improve the quality of their services. However, medical
+              data often contain several variables, and not all the data equally contribute
+              towards the prediction. The existence of irrelevant and redundant features in a
+              dataset can unnecessarily increase computational cost and complexity while
+              deteriorating the performance of the predictive model. In this study, we employ
+              the gradient-based prediction attribution as a general tool to identify important
+              features in differentiable predictive models, such as neural networks (NN) and
+              linear regression. Built upon this approach, we analyse single-stage and
+              multi-stage scenarios for feature selection using ten medical datasets. Through
+              extensive experiments, we demonstrate that the combination of the
+              gradient-based approach with NN provides a powerful nonlinear technique to
+              identify important features contributing to the prediction. In particular,
+              nonlinear gradient-based feature selection achieves competitive results or
+              significant improvements over previously reported results on all dataset.},
+        selected={true
+}
 
 
 @inproceedings{2,
