--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,13 +8,13 @@
 
 @inproceedings{3,
  abbr={IJDMMM},
-  mainlink = {},
+  mainlink = {https://link.springer.com/article/10.1007/s10389-020-01418-5},
        img = {assets/img/figmethod.jpg},
   author    = {Sadaf Kabir and Leily Farrokhvar},
   title     = {Nonlinear gradient-based feature selection for precise prediction of diseases},
   booktitle = IJDMMM,
   year      = {2022},
-  pdf       = {},
+  pdf       = {https://link.springer.com/article/10.1007/s10389-020-01418-5},
   abstract = {Developing accurate predictive models can profoundly help
               healthcare providers improve the quality of their services. However, medical
               data often contain several variables, and not all the data equally contribute
