--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,21 +12,21 @@
   title     = {Non-linear Gradient-based Feature Selection for Precise Prediction of Disease},
   booktitle = IJDMMM,
   year      = {2021},
-  abstract = {Background: Developing accurate predictive models can profoundly help
-                          healthcare providers improve the quality of their services. However, medical
-                          data often contain several variables, and not all the data equally contribute
-                          towards the prediction. The existence of irrelevant and redundant features in a
-                          dataset can unnecessarily increase computational cost and complexity while
-                          deteriorating the performance of the predictive model. In this study, we employ
-                          the gradient-based prediction attribution as a general tool to identify important
-                          features in differentiable predictive models, such as neural networks (NN) and
-                          linear regression. Built upon this approach, we analyse single-stage and
-                          multi-stage scenarios for feature selection using ten medical datasets. Through
-                          extensive experiments, we demonstrate that the combination of the
-                          gradient-based approach with NN provides a powerful nonlinear technique to
-                          identify important features contributing to the prediction. In particular,
-                          nonlinear gradient-based feature selection achieves competitive results or
-                          significant improvements over previously reported results on all dataset.},
+  abstract = {Developing accurate predictive models can profoundly help
+              healthcare providers improve the quality of their services. However, medical
+              data often contain several variables, and not all the data equally contribute
+              towards the prediction. The existence of irrelevant and redundant features in a
+              dataset can unnecessarily increase computational cost and complexity while
+              deteriorating the performance of the predictive model. In this study, we employ
+              the gradient-based prediction attribution as a general tool to identify important
+              features in differentiable predictive models, such as neural networks (NN) and
+              linear regression. Built upon this approach, we analyse single-stage and
+              multi-stage scenarios for feature selection using ten medical datasets. Through
+              extensive experiments, we demonstrate that the combination of the
+              gradient-based approach with NN provides a powerful nonlinear technique to
+              identify important features contributing to the prediction. In particular,
+              nonlinear gradient-based feature selection achieves competitive results or
+              significant improvements over previously reported results on all dataset.},
         selected={true}
 }
 
