--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
 @inproceedings{3,
  abbr={IJDMMM},
          img = {assets/img/figmethod.jpg},
-  author    = {Sadaf Kabir and Leily Farrokhvar},
+  author    = {Sadaf Kabirrrrrrrrrrrrrrr and Leily Farrokhvar},
   title     = {Non-linear Gradient-based Feature Selection for Precise Prediction of Disease},
   booktitle = IJDMMM,
   year      = {2021},
