--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,8 +7,8 @@
 
 @inproceedings{3,
  abbr={IJDMMM},
-         img = {assets/img/figmethod101.jpg},
-  author    = {Sadaf Kabir and Leilyyy Farrokhvar},
+         img = {assets/img/imgtest.jpg},
+  author    = {Sadaf Kabir and Leily Farrokhvar},
   title     = {Non-linear Gradient-based Feature Selection for Precise Prediction of Disease},
   booktitle = IJDMMM,
   year      = {2021},
